--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/material": "^7.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "rsuite": "^5.79.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
